Add API routes for user application association
