# api/routes/user_routes.py
@@ -1,0 +1,14 @@
+def get_all_users_associated_with_application():
+    pass
+
+
+def get_user_application_association():
+    pass
+
+
+def add_user_application_association():
+    pass
+
+
+def update_user_application_association():
+    pass
